# Skatezy

./: README.md  app.py  db.py  forms.py  main.py  pyproject.toml  radar_ice_rink.py  requirements.txt  schema.sql  sqlite_db  user.py
static/: main.js
static/css/: googlelogin.css  login.css  main.css  personal.css  recordTraining.css
templates/: base.html  googlelogin.html  internationalPage.html  login.html  personal.html  recordTraining.html  registerTeam.html  team.html  teamPage.html  test.html
