[tool.poetry]
name = "projectdemo1winterhqackoriginalyk"
version = "0.1.0"
description = ""
authors = ["repl.it user <replituser@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
firebase = "^3.0.1"
flask-login = "^0.5.0"
oauthlib = "^3.1.0"
click = "^7.1.2"
helpers = "^0.2.0"
sqlalchemy = "^1.3.22"
termcolor = "^1.1.0"
boto3 = "^1.16.40"
python-dotenv = "^0.15.0"
authlib = "^0.15.2"
flask-wtf = "^0.14.3"
wtforms = "^2.3.3"
django-google-auth = "^0.4.0"
radar = "^0.3"
radar-client = "^0.1.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
